[tool.poetry]
name = "philippe-research"
version = "0.1.0"
description = ""
authors = ["Eymeric CHAUCHAT <chauchat.eymeric.r7@dc.tohoku.ac.jp>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.2"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
